logs/plugins/s/show-twitter-followers/ast-sqlite-boot/error.log
file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:325
        throw new Error($, { cause: h });
              ^

Error: [13-Jun-2025 06:43:50 UTC] PHP Warning:  Undefined variable $wp_version in /wordpress/wp-content/plugins/springbot/views/springbot-requirements-error.php on line 13
[13-Jun-2025 06:44:00 UTC] PHP Warning:  Undefined variable $wp_version in /wordpress/wp-content/plugins/springbot/views/springbot-requirements-error.php on line 13
[13-Jun-2025 06:44:09 UTC] PHP Warning:  Undefined variable $wp_version in /wordpress/wp-content/plugins/springbot/views/springbot-requirements-error.php on line 13
[13-Jun-2025 06:44:50 UTC] PHP Fatal error:  Uncaught TypeError: call_user_func_array(): Argument #1 ($callback) must be a valid callback, non-static method PD_Discord_OAuth::activation() cannot be called statically in /wordpress/wp-includes/class-wp-hook.php:324
Stack trace:
#0 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#1 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#2 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sso-oa...', false)
#3 /internal/eval.php(20): activate_plugin('sso-oauth-disco...')
#4 {main}
  thrown in /wordpress/wp-includes/class-wp-hook.php on line 324
[13-Jun-2025 06:44:58 UTC] PHP Fatal error:  Uncaught TypeError: call_user_func_array(): Argument #1 ($callback) must be a valid callback, non-static method PD_Discord_OAuth::activation() cannot be called statically in /wordpress/wp-includes/class-wp-hook.php:324
Stack trace:
#0 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#1 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#2 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sso-oa...', false)
#3 /internal/eval.php(20): activate_plugin('sso-oauth-disco...')
#4 {main}
  thrown in /wordpress/wp-includes/class-wp-hook.php on line 324
[13-Jun-2025 06:45:06 UTC] PHP Fatal error:  Uncaught TypeError: call_user_func_array(): Argument #1 ($callback) must be a valid callback, non-static method PD_Discord_OAuth::activation() cannot be called statically in /wordpress/wp-includes/class-wp-hook.php:324
Stack trace:
#0 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#1 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#2 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sso-oa...', false)
#3 /internal/eval.php(20): activate_plugin('sso-oauth-disco...')
#4 {main}
  thrown in /wordpress/wp-includes/class-wp-hook.php on line 324
[13-Jun-2025 06:45:45 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[13-Jun-2025 06:45:54 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[13-Jun-2025 06:46:02 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[13-Jun-2025 06:46:12 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version_field_name in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:46:12 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:46:21 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version_field_name in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:46:21 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:46:31 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version_field_name in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:46:31 UTC] PHP Warning:  Undefined property: Superior_FAQ::$version in /wordpress/wp-content/plugins/superior-faq/superior-faq.php on line 885
[13-Jun-2025 06:47:11 UTC] PHP Fatal error:  Uncaught ArgumentCountError: Too few arguments to function WP_Widget::__construct(), 0 passed in /wordpress/wp-content/plugins/show-twitter-followers/show-twitter-followers.php on line 433 and at least 2 expected in /wordpress/wp-includes/class-wp-widget.php:163
Stack trace:
#0 /wordpress/wp-content/plugins/show-twitter-followers/show-twitter-followers.php(433): WP_Widget->__construct()
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('show-twitter-fo...')
#3 /internal/eval.php(20): activate_plugin('show-twitter-fo...')
#4 {main}
  thrown in /wordpress/wp-includes/class-wp-widget.php on line 163

    at Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:325:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async re (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:149:10) {
  [cause]: Error: Error when executing the blueprint step #5 ({"step":"installPlugin","pluginData":{"resource":"wordpress.org/plugins","slug":"show-twitter-followers"},"options":{"activate":true}}) : PHP.run() failed with exit code 255 and the following output: 
      at Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12093:19)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async ys (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12196:3)
      at async Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:315:48)
      at async re (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:149:10) {
    [cause]: PHPExecutionFailureError: PHP.run() failed with exit code 255 and the following output: 
        at PHP.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@php-wasm/universal/index.js:1034:19)
        at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
        at async wr (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:34:39)
        at async Object.gt [as installPlugin] (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:631:42)
        at async g (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12161:30)
        at async Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12090:23)
        at async ys (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12196:3)
        at async Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:315:48)
        at async re (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:149:10) {
      response: PHPResponse {
        httpStatusCode: 500,
        headers: {
          'x-powered-by': [ 'PHP/8.0.30-dev' ],
          'content-type': [ 'text/html; charset=UTF-8' ]
        },
        bytes: Uint8Array(0) [],
        exitCode: 255,
        errors: ''
      },
      source: 'request'
    }
  }
}

Node.js v23.11.0
